@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <addon
 	id="plugin.video.dr.dk.podcast"
-	version="1.0.1"
+	version="1.0.2"
 	name="DR.dk Video Podcasts"
 	provider-name="twinther [tommy@winther.nu]">
 	<requires>
